# xdd_pictures

./: Cargo.toml  README.md
TonyG talk/: xDDs in combinatorics.odp
benches/: chessboard_coverings.rs  directed_animals.rs
examples/: draw_coverings.rs
src/: chessboard.rs  directed_animals.rs  lib.rs  tiling_problem.rs
tests/: chessboard_coverings.rs  directed_animals.rs
