[package]
name = "chessboard_tiling_pictures"
version = "0.1.0"
edition = "2024"

[dependencies]
xdd = {path = "../xdd"}
lattice-picture = {path = "../lattice-picture"}

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
# I can't work out how to get it to do both, so enable one at at time.
# If someone knowms, please tell me.
# name = "chessboard_coverings"
name = "directed_animals"
harness = false

